; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_dgst.c_newline_escape_filename.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_dgst.c_newline_escape_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*)* @newline_escape_filename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @newline_escape_filename(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  store i64 0, i64* %6, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i64 @strlen(i8* %12)
  store i64 %13, i64* %7, align 8
  store i64 0, i64* %8, align 8
  store i64 0, i64* %9, align 8
  store i8* null, i8** %10, align 8
  store i64 0, i64* %5, align 8
  br label %14

14:                                               ; preds = %29, %2
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* %7, align 8
  %17 = icmp ult i64 %15, %16
  br i1 %17, label %18, label %32

18:                                               ; preds = %14
  %19 = load i8*, i8** %3, align 8
  %20 = load i64, i64* %5, align 8
  %21 = getelementptr inbounds i8, i8* %19, i64 %20
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 10
  br i1 %24, label %25, label %28

25:                                               ; preds = %18
  %26 = load i64, i64* %8, align 8
  %27 = add i64 %26, 1
  store i64 %27, i64* %8, align 8
  br label %28

28:                                               ; preds = %25, %18
  br label %29

29:                                               ; preds = %28
  %30 = load i64, i64* %5, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %5, align 8
  br label %14

32:                                               ; preds = %14
  %33 = load i64, i64* %7, align 8
  %34 = load i64, i64* %8, align 8
  %35 = add i64 %33, %34
  %36 = add i64 %35, 1
  store i64 %36, i64* %9, align 8
  %37 = load i64, i64* %9, align 8
  %38 = load i8*, i8** %3, align 8
  %39 = call i8* @app_malloc(i64 %37, i8* %38)
  store i8* %39, i8** %10, align 8
  store i64 0, i64* %5, align 8
  br label %40

40:                                               ; preds = %68, %32
  %41 = load i64, i64* %6, align 8
  %42 = load i64, i64* %7, align 8
  %43 = icmp ult i64 %41, %42
  br i1 %43, label %44, label %71

44:                                               ; preds = %40
  %45 = load i8*, i8** %3, align 8
  %46 = load i64, i64* %6, align 8
  %47 = getelementptr inbounds i8, i8* %45, i64 %46
  %48 = load i8, i8* %47, align 1
  store i8 %48, i8* %11, align 1
  %49 = load i8, i8* %11, align 1
  %50 = sext i8 %49 to i32
  %51 = icmp eq i32 %50, 10
  br i1 %51, label %52, label %62

52:                                               ; preds = %44
  %53 = load i8*, i8** %10, align 8
  %54 = load i64, i64* %5, align 8
  %55 = add i64 %54, 1
  store i64 %55, i64* %5, align 8
  %56 = getelementptr inbounds i8, i8* %53, i64 %54
  store i8 92, i8* %56, align 1
  %57 = load i8*, i8** %10, align 8
  %58 = load i64, i64* %5, align 8
  %59 = add i64 %58, 1
  store i64 %59, i64* %5, align 8
  %60 = getelementptr inbounds i8, i8* %57, i64 %58
  store i8 110, i8* %60, align 1
  %61 = load i32*, i32** %4, align 8
  store i32 1, i32* %61, align 4
  br label %68

62:                                               ; preds = %44
  %63 = load i8, i8* %11, align 1
  %64 = load i8*, i8** %10, align 8
  %65 = load i64, i64* %5, align 8
  %66 = add i64 %65, 1
  store i64 %66, i64* %5, align 8
  %67 = getelementptr inbounds i8, i8* %64, i64 %65
  store i8 %63, i8* %67, align 1
  br label %68

68:                                               ; preds = %62, %52
  %69 = load i64, i64* %6, align 8
  %70 = add i64 %69, 1
  store i64 %70, i64* %6, align 8
  br label %40

71:                                               ; preds = %40
  %72 = load i8*, i8** %10, align 8
  %73 = load i64, i64* %5, align 8
  %74 = getelementptr inbounds i8, i8* %72, i64 %73
  store i8 0, i8* %74, align 1
  %75 = load i8*, i8** %10, align 8
  ret i8* %75
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @app_malloc(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
